fix z-index of overlay

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -43,6 +43,7 @@
   width: 100%;
   left: 0;
   top: 0;
+  z-index: 3;
 }
 
 .about-overlay {
